--- a/improving/s_pretest.tex
+++ b/improving/s_pretest.tex
@@ -64,7 +64,7 @@ The products reviewed by customers usually don't include inner workings of softw
 	\item Development cost estimates.
 	\item Development quality estimates.
 	\item Training materials.
-	\item HELP text and help screens.
+	\item Help text and help screens.
 	\item Features of COTS packages.
 	\item High-severity bug or defect repairs.
 \end{enumerate}
