Added some mentioning of startup

--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -27,7 +27,7 @@ Lean Startup method is aiming for the goal of winning over customers and not opp
 \section{Foundations of high quality}
 \label{sec:foundations_quality}
 
-Implementing high quality software starts from the beginning of the project. The foundations of high quality have to be solid for the overall high quality to emerge. These foundations are at the structure of the code and other deliverables.
+In a startup environment, it is particularly important that the quality of the software is sufficient to allow the further development. Compared to a company running a successful business already, a startup company usually cannot afford many mistakes in the product life cycle. Implementing high quality software starts from the beginning of the project. The foundations of high quality have to be solid for the overall high quality to emerge. These foundations are at the structure of the code and other deliverables. 
 
  \subsection{Clean code} 
 
