--- a/books.bib
+++ b/books.bib
@@ -2,7 +2,7 @@
 author = {American society for quality},
 title = {Quality glossary},
 year = {2013},
-url = {http://asq.org/glossary/q.html}
+howpublished = {Available at: http://asq.org/glossary/q.html Referenced 2013.}
 }
 
 @book{jones2011economics,
@@ -19,7 +19,7 @@ url = {http://asq.org/glossary/q.html}
 author = {Wojciech Seliga},
 title = {Code Review in Agile Teams – part II},
 year = {2010},
-url = {https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/}
+howpublished = {Available at: https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/ Referenced 2013.}
 }
 
 @misc{beck2001agile,
@@ -33,7 +33,7 @@ url = {https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/}
   keywords = {imported},
   timestamp = {2007-12-30T11:39:05.000+0100},
   title = {Manifesto for Agile Software Development},
-  url = {http://www.agilemanifesto.org/},
+  howpublished = {Available at: http://www.agilemanifesto.org/ Referenced .1.2014.},
   year = 2001
 }
 
@@ -55,9 +55,9 @@ url = {https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/}
 
 @ONLINE{ISOBlog,
 author = {Roelof Reitsma},
-title = {Software has a new quality standard: ISO 25010},
+title = {Software has a new quality standard: {ISO} 25010},
 year = {2011},
-url = {http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html}
+howpublished = {Available at: http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html Referenced .12.2013.}
 }
 
 @book{ries2011lean,
@@ -76,7 +76,7 @@ url = {http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.h
 author = {Steve Blank},
 title = {What’s A Startup? First Principles.},
 year = {2010},
-url = {http://steveblank.com/2010/01/25/whats-a-startup-first-principles/}
+howpublished = {Available at: http://steveblank.com/2010/01/25/whats-a-startup-first-principles/ Referenced 20.12.2013.}
 }
 
 
@@ -91,7 +91,7 @@ url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-s
 author = {Futurice},
 title = {Futurice - Fact Sheet},
 year = {2014},
-url = {http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf}
+howpublished = {Available at: http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf Referenced .3.2014.}
 }
 
 
@@ -139,30 +139,27 @@ url = {http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pd
 author = {Lisa Crispin},
 title = {STAREAST: Agile testing and defect tracking},
 year = {2011},
-url = {http://searchsoftwarequality.techtarget.com/tip/STAREAST-Agile-testing-and-defect-tracking}
+howpublished = {Available at: http://searchsoftwarequality.techtarget.com/tip/STAREAST-Agile-testing-and-defect-tracking Referenced .3.2014.}
 }
 
 @ONLINE{kloctofp,
 author = {Quantitative Software Management Inc.},
 title = {Function Point Languages Table},
 year = {2014},
-url = {http://www.qsm.com/resources/function-point-languages-table}
+howpublished = {Available at: http://www.qsm.com/resources/function-point-languages-table Referenced .3.2014.}
 }
 
-@misc{iso25010,
-   Key = {ISO 25010},
-   publisher = {ISO, Geneva, Switzerland},
-   type = {Norm},
-   title = {Systems and software engineering — Systems and software Quality Requirements and Evaluation (SQuaRE) — System and software quality models},
-   number = {ISO 25010},
-   year = {2011},
+@book{iso25010, 
+Author = {ISO{~}25010}, 
+publisher = {ISO, Geneva, Switzerland},
+Title = {Systems and software engineering — Systems and software Quality Requirements and Evaluation (SQuaRE) — System and software quality models},
+year = {2011},
 }
 
-@misc{iso9126,
-   Key = {ISO 9126},
-   publisher = {ISO, Geneva, Switzerland},
-   type = {Norm},
-   title = {Software engineering -- Product quality -- Part 1: Quality model},
-   number = {ISO 9126},
-   year = {2001},
+
+@book{iso9126, 
+Author = {ISO{~}9126}, 
+publisher = {ISO, Geneva, Switzerland},
+Title = {Software engineering -- Product quality -- Part 1: Quality model},
+year = {2001},
 }
