--- a/books.bib
+++ b/books.bib
@@ -1,8 +1,7 @@
 @ONLINE{ASQglossary,
 author = {American society for quality},
 title = {Quality glossary},
-year = {2013},
-howpublished = {Available at: http://asq.org/glossary/q.html Referenced 2013.}
+howpublished = {[WWW]. [accessed at 23].11.2013. Available at: http://asq.org/glossary/q.html. }
 }
 
 @book{jones2011economics,
@@ -18,8 +17,7 @@ howpublished = {Available at: http://asq.org/glossary/q.html Referenced 2013.}
 @ONLINE{atlassianAgileReview,
 author = {Wojciech Seliga},
 title = {Code Review in Agile Teams – part II},
-year = {2010},
-howpublished = {Available at: https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/ Referenced 2013.}
+howpublished = {[WWW]. [accessed at 28.12.2013]. Available at: https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/. }
 }
 
 @misc{beck2001agile,
@@ -33,7 +31,7 @@ howpublished = {Available at: https://blogs.atlassian.com/2010/03/code_review_in
   keywords = {imported},
   timestamp = {2007-12-30T11:39:05.000+0100},
   title = {Manifesto for Agile Software Development},
-  howpublished = {Available at: http://www.agilemanifesto.org/ Referenced .1.2014.},
+  howpublished = {[WWW]. [accessed at .1].2014. Available at: http://www.agilemanifesto.org/ } ,
   year = 2001
 }
 
@@ -56,8 +54,7 @@ howpublished = {Available at: https://blogs.atlassian.com/2010/03/code_review_in
 @ONLINE{ISOBlog,
 author = {Roelof Reitsma},
 title = {Software has a new quality standard: {ISO} 25010},
-year = {2011},
-howpublished = {Available at: http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html Referenced .12.2013.}
+howpublished = {[WWW]. [accessed at 27.11.2013]. Available at: http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html }
 }
 
 @book{ries2011lean,
@@ -74,9 +71,8 @@ howpublished = {Available at: http://ryreitsma.blogspot.fi/2011/07/software-has-
 
 @ONLINE{blank2010startup,
 author = {Steve Blank},
-title = {What’s A Startup? First Principles.},
-year = {2010},
-howpublished = {Available at: http://steveblank.com/2010/01/25/whats-a-startup-first-principles/ Referenced 20.12.2013.}
+title = {What’s A Startup? {F}irst Principles.},
+howpublished = {[WWW]. [accessed at 26.12.2013]. Available at: http://steveblank.com/2010/01/25/whats-a-startup-first-principles/ }
 }
 
 
@@ -89,9 +85,8 @@ url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-s
 
 @ONLINE{futuricefact,
 author = {Futurice},
-title = {Futurice - Fact Sheet},
-year = {2014},
-howpublished = {Available at: http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf Referenced .3.2014.}
+title = {Futurice - {F}act Sheet},
+howpublished = {[WWW]. [accessed at 28.3.2014]. Available at: http://www.futurice.com/wp-content/uploads/2014/02/Fact-Sheet-English2.pdf }
 }
 
 
@@ -138,15 +133,13 @@ howpublished = {Available at: http://www.futurice.com/wp-content/uploads/2014/02
 @ONLINE{stareastcrispin,
 author = {Lisa Crispin},
 title = {STAREAST: Agile testing and defect tracking},
-year = {2011},
-howpublished = {Available at: http://searchsoftwarequality.techtarget.com/tip/STAREAST-Agile-testing-and-defect-tracking Referenced .3.2014.}
+howpublished = {[WWW]. [accessed at 29.3.2014]. Available at: http://searchsoftwarequality.techtarget.com/tip/STAREAST-Agile-testing-and-defect-tracking }
 }
 
 @ONLINE{kloctofp,
 author = {Quantitative Software Management Inc.},
 title = {Function Point Languages Table},
-year = {2014},
-howpublished = {Available at: http://www.qsm.com/resources/function-point-languages-table Referenced .3.2014.}
+howpublished = {[WWW]. [accessed at 12.3.2014]. Available at: http://www.qsm.com/resources/function-point-languages-table }
 }
 
 @book{iso25010, 
