Improvements to abstract

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -72,7 +72,7 @@ Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmisto
  
  % Konteksti
 \noindent
-Progress in modern software development has made possible that small prototypes can be implemented with small budget and short schedule. The amount of startup companies has begun to grow since proving the business ideas with fast prototyping has become so easy. A team with sufficient experience can implement a simple working prototype as fast as in weeks.
+Progress in modern software development has enabled tiny prototypes that can be implemented with small budget and short schedule. Since proving the business ideas with fast prototyping has become so easy, the number of startup companies has begun to grow. A team with sufficient experience can implement a simple working prototype as fast as in weeks.
  
  % Ongelma
 \noindent
@@ -80,7 +80,7 @@ Development of these simple prototypes can lead to poor quality of code and stru
 
  % Tässä diplomityössä (mitä tehty ratkaisemiseksi)
 \noindent
-This thesis discusses about software quality in both traditional software development and software startup environment. Methods traditionally used for improving quality and their efficiency are presented. These methods are also joined to the quality methods recommended for software startup environment. Finally, this thesis presents an example project done for a software startup.
+This thesis discusses software quality in both traditional software development and software startup environment. Methods traditionally used for improving quality and their efficiency are presented. These methods are also joined to the quality methods recommended for software startup environment. Finally, this thesis presents an example project done for a software startup.
 
 % Arvio onnistumisesta
 \noindent
