Improvements for Tiivistelmä

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -38,7 +38,7 @@
 \textsf{TAMPEREEN TEKNILLINEN YLIOPISTO}\\
 \textsf{Tietotekniikan koulutusohjelma}\\
 {\bf \textsf{Mikko Pohja: Laadunhallinta startup-yrityksen ohjelmistoprojektissa}}\\
-\textsf{Diplomityö, 60 sivua}\\
+\textsf{Diplomityö, 61 sivua}\\
 \textsf{Xxxxxkuu 2014}\\
 \textsf{Pääaine: }\\
 \textsf{Tarkastajat: }\\
@@ -46,16 +46,16 @@
 \end{spacing}
  
 \noindent
-Moderni ohjelmistokehitys on tehnyt mahdolliseksi nopeiden prototyyppien kehityksen pienellä budjetilla ja lyhyellä aikataululla. Tämä on mahdollistanut startup-yritysten yleistymisen. Nämä startup-yritykset voivat kokeilla ja kehittää liikeideaansa nopealla aikataululla käyttäen edistyneitä ohjelmistokehyksiä ja noudattaen ketterän ohjelmistokehityksen periaatteita. Kokenut tiimi kykenee luomaan toimivan prototyypin jo muutamassa viikossa.
+Moderni ohjelmistokehitys on tehnyt mahdolliseksi nopeiden prototyyppien kehityksen pienellä budjetilla ja lyhyellä aikataululla. Tästä on seurannut startup-yritysten nopea yleistyminen. Startup-yritykset voivat kokeilla ja kehittää liikeideaansa nopealla aikataululla käyttäen edistyneitä ohjelmistokehyksiä ja noudattaen ketterän ohjelmistokehityksen periaatteita. Kokenut tiimi kykenee luomaan toimivan prototyypin jo muutamassa viikossa.
  
 \noindent
-Nopea ohjelmistokehitys saattaa johtaa ohjelmiston lähdekoodin ja rakenteen huonoon laatuun, joka hidastaa ja vaikeuttaa kehitystä tulevaisuudessa. Ohjelmiston laatuun täytyy alkaa kiinnittämään huomiota viimeistään siinä vaiheessa, kun liikeidea todetaan menestyväksi ja ohjelmiston kehitystä jatketaan prototyyppivaiheesta eteenpäin. 
+Nopea ohjelmistokehitys saattaa johtaa ohjelmiston lähdekoodin ja rakenteen huonoon laatuun, joka hidastaa ja vaikeuttaa kehitystä tulevaisuudessa. Ohjelmiston laatuun täytyy alkaa kiinnittää huomiota viimeistään siinä vaiheessa, kun liikeidea todetaan menestyväksi ja ohjelmiston kehitystä jatketaan prototyyppivaiheesta eteenpäin. Lisäksi startup-yrityksissä ohjelmiston laatu riippuu kriittisesti toteutettavan järjestelmän sopivuudesta kohderyhmälle. Tämän takia järjestelmän sopivuuden jatkuva validointi kehityksen aikana on tärkeä osa kehitystä.
 
 \noindent
-Tässä diplomityössä on käsitelty perinteisiä laadunvarmistusmenetelmiä sekä niiden tehokkuutta. Myös startup-yrityksistä sekä niiden laatukäsityksestä on kerrottu yleisellä tasolla. Lisäksi ohjelmistojenn laadun parantamiseen käytettyjä tekniikoita on tarkasteltu startupin näkökulmasta sekä yhdistetty perinteisiä laatumenetelmiä startupille tyypilliseen laadunvarmistukseen. Lopuksi on esitelty startup-yritykselle toteutettu ohjelmistoprojekti ja käsitelty sen laadun toteutumista tehtyjen haastattelujen pohjalta.
+Tässä diplomityössä on käsitelty perinteisiä laadunvarmistusmenetelmiä sekä niiden tehokkuutta. Myös startup-yrityksiä sekä niiden laatukäsitystä on tarkasteltu yleisellä tasolla. Lisäksi ohjelmistojen laadun parantamiseen käytettyjä tekniikoita on tarkasteltu startupin näkökulmasta sekä yhdistetty perinteisiä laatumenetelmiä startupille tyypilliseen laadunvarmistukseen. Lopuksi esitellään startup-yritykselle toteutettu ohjelmistoprojekti sekä käsitellään sen laadun toteutumista tehtyjen haastattelujen pohjalta.
 
 \noindent
-Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmistokehityksen ja modernin startup-yrityksen ohjelmistokehityksen välillä. Myös laadun parantamiseen käytetyt metodit eroavat näiden kehitysmuotojen välillä. Perinteiset metodit luottavat enemmän teknisiin lähestymistapoihin, joilla löydetään virheitä, kun taas modernissa laadunparannuksessa keskitytään enemmän ihmisiin ja kehitysprosessiin. Perinteiseen laadunparannukseen liittyviä teknisiä toimenpiteitä, kuten katselmointeja ja erilaisia testausmuotoja, voi kuitenkin soveltaa modernin laadunparannuksen osana. 
+Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmistokehityksen ja modernin startup-yrityksen ohjelmistokehityksen välillä. Myös laadun parantamiseen käytetyt metodit eroavat näiden kehitysmuotojen välillä. Perinteiset menetelmät luottavat enemmän teknisiin lähestymistapoihin, joilla löydetään virheitä, kun taas modernissa laadunparannuksessa keskitytään enemmän ihmisiin ja kehitysprosessiin. Perinteiseen laadunparannukseen liittyviä teknisiä toimenpiteitä, kuten katselmointeja ja erilaisia testausmuotoja, voi kuitenkin soveltaa modernin laadunparannuksen osana. 
 
 \newpage
 \chapter*{ABSTRACT}
@@ -63,7 +63,7 @@ Työn tuloksena todettiin, että laatukäsitykset eroavat perinteisen ohjelmisto
 \textsf{TAMPERE UNIVERSITY OF TECHNOLOGY}\\
 \textsf{Master's Degree Programme in Information Technology}\\
 {\bf \textsf{Mikko Pohja : Quality control in a startup software project}}\\
-\textsf{Master of Science Thesis, 60 pages}\\
+\textsf{Master of Science Thesis, 61 pages}\\
 \textsf{xxxxxx 2014}\\
 \textsf{Major: }\\
 \textsf{Examiner: }\\
