Added something more to conclusions

--- a/conclusions/c_conclusions.tex
+++ b/conclusions/c_conclusions.tex
@@ -26,6 +26,6 @@ When traditional quality improvement has more focus on the technical aspects, me
 
 % Further research on the topic could focus more on the human aspects of the development and ignore the traditional software quality assurance. 
 
-In the future, topics regarding the human aspects of the development could be further researched. Building a motivating environment which embraces expertise and leadership seem to improve the efficiency of the team and eventually raise the quality of the software developed. In the further work the effect of these topics could be examined in real projects.
+In the future, topics regarding the human aspects of the development could be further researched. Building a motivating environment which embraces expertise and leadership seem to improve the efficiency of the team and eventually raise the quality of the software developed. In the further work the effect of these human factors could be examined in real projects. This examination could include good practices used in successful projects and pitfalls found in lower quality projects.
 
-In addition, individual activities used in modern software development could be inspected. Peer reviews and other means improving communication are widely used. In an experienced team with skilled professionals, communication acts an important part in achieving high quality. The usage of these activities in a startup environment could be an interesting topic for a research.
+In addition, individual activities used in modern software development could be inspected. Peer reviews and other means improving communication are widely used. In an experienced team with skilled professionals, communication acts an important part in achieving high quality. In addition, consistently more automatic tools aiding the development are used, which should make reaching high quality easier. The usage of these activities and processes in a successful startup environment could be an interesting topic for a research.
