Cleanup for clean base

--- a/background/c_background.tex
+++ b/background/c_background.tex
@@ -1,9 +1,6 @@
 
  \chapter{Background}
  
-This chapter describes software quality and startup environment. Section~\ref{sec:software_quality} describes software quality in general and the motivation behind improving quality. Section~\ref{sec:startup} explains the context of a startup environment and the phases in the life of a startup.
+This chapter describes something of something. Section~\ref{sec:software_quality} describes software quality.
 
  \input{background/s_quality_general}
-
-
-\input{background/s_startup}
