--- a/general/c_intro.tex
+++ b/general/c_intro.tex
@@ -1,31 +1,14 @@
 
 \chapter{Introduction}
 
-%Konteksti
-% Koodauskielien, frameworkkien, ympäristöjen (as a service) kehittyminen ja osaamisen lisääntyminen on tehnyt mahdolliseksi softan tekemisen ilman massiivista budjettia, suurta tiimiä tai pitkää prosessia.
-% Lean ja Agile on helpottanut ja nopeuttanut kehitystyötä ja tehnyt mahdolliseksi nopean validoinnin ja julkaisemisen.
-% 
+Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.
 
-Progress in recent history has made developing new products and services in the field of software development increasingly easy. New and improved programming languages and frameworks are introduced constantly. These frameworks provide easy to start platforms for new software development removing the need for excessive planning and understanding of many low-level implementation details. In addition, the need for expensive hardware setup has come obsolete as several instances have appeared offering reasonably priced execution environments as a service. 
+Failure is not an option.
 
-These changes in the industry along with the progress in development processes have brought the possibility to create software business closer to every would-be entrepreneur. Developing software with Agile or Lean methodology with modern technologies have lowered the initial time and resources required. Experienced software developers can implement a prototype as fast as in weeks starting from scratch and ending in having a working product publicly available. Attempts to create the next big software product are on a rise as the stories of success spread around the globe.
+The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round. I believe I never knew what the word round meant until I saw Earth from space.
 
-% TODO: lisää kontekstia?
+Dinosaurs are extinct today because they lacked opposable thumbs and the brainpower to build a space program.
 
-%Ratkaistava ongelma
-% Helppo ja nopea tekeminen johtaa helposti huonoon laatuun sekä budjetin ja aikataulun kasvuun
-% 
+The sky is the limit only for those who aren't afraid to fly!
 
-Since the number of attempts for success are increasing, so is the number of companies succeeding. When a product built with minimum effort starts to prosper, the demand for high quality emerges. As products done by traditional software development are built with large amounts of effort used to improving the quality of the product, modern startup entrepreneurs may become confused when considering the quality of their product. The methods and activities used in traditional software development may seem separate from the rapid development of modern products. In addition, modern software development methodologies focus on different aspects of software quality than in traditional software development.
-
-%"Tässä diplomityössä..."
-% Käsitellään perinteisiä laadunvarmistusmenetelmiä sekä niiden tehokkuutta
-% Kerrotaan startupista yleisesti sekä sen määritelmästä laadulle
-% Kerrotaan perinteisten laadunvarmistusmenetelmien soveltumisesta nykyisiin startupin juttuihin
-% Käsitellään esimerkkinä CASE-projekti, joka on pienehkön budjetin projekti startupille
-
-This thesis presents software quality in a startup environment and suggests the activities for improving it. Traditional quality improvement methods are presented and linked to the methods recommended in startup environments. Also a real-life software project for a Finnish startup is presented for illustration purposes. The project, executed in a Finnish software company Futurice, is evaluated by using the data gathered after the project from interviews of the project stakeholders.
-
-%Rakenne luku kerrallaan + sisällön esittely "lause per luku"
-
-The rest of this thesis is organised as follows. Chapter 2 introduces the background by defining software quality and startup environment. Chapter 3 describes the methods and activities improving software quality and divides them in phases of traditional software development. Chapter 4 redefines quality in context of a software startup and describes the methods of quality improvement applicable in startup software development. Chapter 5 presents the execution and phases of the case project and evaluates the quality achieved based on the interviews of the stakeholders.
+There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.
