--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -6,7 +6,7 @@
 % If thesis is in English, use the file "tut-logo"
 % instead of "tty-logo" in the following:
  
-\includegraphics[width=8cm]{tillbehor/tut-logo}
+\includegraphics[width=8cm]{assets/tut-logo}
  
 \vspace{6.8cm}
  
