Add Sami's comments

--- a/methods/c_methods.tex
+++ b/methods/c_methods.tex
@@ -1,4 +1,9 @@
 
 \chapter{Methods}
 
-Temp
+% Ehkä tätä voisi kutsua design research nimikkeellä (Googlaa). 
+% Real life case study (tai field study)
+% datan keräysmetodina käyttäjä/asiakashaastattelut  (muuta?, kehitysdokumentit?)  
+
+
+% Implementaatiosta sen verran että tutkimusmetodina on implementoida teknologiaa ja tutkia kuinka se soveltuu arkipäivän käyttöön. Voisi myös miettiä lähestymistä että sulla on ollut kaksi eri tilannetta 1. softa ilman offline"palikkaa/featurea" ja 2. offline palikan kanssa. Tutkit että kuinka offlinepalikka vaikutti sovelluksen käyttökokemukseen.
