--- a/related_research/c_related_research.tex
+++ b/related_research/c_related_research.tex
@@ -1,4 +1,14 @@
 
 \chapter{Related Research}
 
-Temp
+% Yleisesti verkoista, tekniikasta, toimivuusta, ratkaisuja offline moodiin
+% - kännyverkon toiminnasta jotain?
+% - kännyverkon toimivuuden vaihtelun yleisyydestä? 
+% - minkälaisia offline ratkaisuja on olemassa web/känny-puolella (miten google/microsoft yms. ovat lähestyneet ongelmaa
+
+% Erityisesti liittyen sun caseen (reaaliaikainen informaationjako, päiväkoympäristö?)
+% - verkkovälitteinen vuorovaikutus
+% - hakusanalla computer supported collaborative work (CSCW) löytyy kamaa 
+
+% Research Gap?
+% -> Gappiin ehkä jotain, että verkkovälitteistä vuorovaikutusta on tutkittu paljon (katso CSCW kamaa) ja että mobiiliverkojen tutkimus/kehitys/käyttö ollut räjähdymäistä. Kuitenkaan ei ole paljoa tutkimusta siitä kuinka verkon katkeaminen vaikuttaa reaalisaikaista tiedonvälitystä vaativan sovelluksen käyttökokemukseen ja kuinka sovellussuunnittelussa tulisi katkot ottaa huomioon.  
